fixed code I think