@@ -13,9 +13,8 @@ buildscript {
 plugins {
 	id 'maven-publish'
 	id "com.modrinth.minotaur" version "2.+"
-	id 'io.github.juuxel.loom-quiltflower' version '1.7.+'
-	id "org.quiltmc.quilt-mappings-on-loom" version "4.2.+"
-	alias(libs.plugins.quilt.loom)
+	id 'fabric-loom' version '1.1-SNAPSHOT'
+	id 'io.github.juuxel.loom-quiltflower' version '1.9.+'
 }
 
 apply plugin: 'de.guntram.mcmod.crowdin-translate'
@@ -33,7 +32,8 @@ repositories {
 	mavenLocal()
 	maven { url = "https://maven.shedaniel.me/" }
 	maven { url = "https://maven.terraformersmc.com/" }
-	maven { url = "https://maven.quiltmc.org/repository/" }
+	maven { url = 'https://maven.quiltmc.org/repository/release' }
+	maven { url = 'https://maven.quiltmc.org/repository/snapshot' }
 	maven { url = "https://maven.parchmentmc.org" }
 	maven { url = "https://jitpack.io" }
 	maven { url = "https://maven.siphalor.de" }
@@ -57,51 +57,51 @@ loom {
 	accessWidenerPath = file("src/main/resources/raa_materials.accesswidener")
 }
 
+configurations.configureEach {
+	resolutionStrategy {
+		force("net.fabricmc.fabric-api:fabric-api:0.58.0+1.19")
+		force("net.fabricmc:fabric-loader:0.14.21")
+	}
+}
+
 dependencies {
 	minecraft libs.minecraft
 	mappings loom.layered {
-		it.addLayer(quiltMappings.mappings("org.quiltmc:quilt-mappings:${libs.versions.quilt.mappings.get()}:v2"))
-		it.parchment("org.parchmentmc.data:parchment-1.18.2:2022.03.13@zip")
-		it.officialMojangMappings {
-			setNameSyntheticMembers(false)
-		}
+		it.mappings("org.quiltmc:quilt-mappings:${libs.versions.quilt.mappings.get()}:intermediary-v2")
+//		it.mappings("net.fabricmc:yarn:${libs.versions.fabric.mappings.get()}:v2")
+		it.parchment("org.parchmentmc.data:parchment-1.19.4:${libs.versions.parchment.get()}@zip")
+		it.officialMojangMappings()
 	}
 
-	modImplementation libs.quilt.loader
+	modImplementation libs.fabric.loader
 
-	modImplementation (libs.fabric.api) {
-		force = true
-	}
+	modImplementation libs.fabric.api
 
-	modImplementation (libs.raa.core) {
-		exclude group: "net.fabricmc.fabric-api"
-	}
+	modImplementation (libs.raa.core)
 
-	modImplementation (libs.create) {
-		exclude group: "net.fabricmc.fabric-api"
-	}
+//	modImplementation (libs.create)
 
 	modImplementation(include("com.electronwill.night-config:core:3.6.3"))
 	modImplementation(include("com.electronwill.night-config:toml:3.6.3"))
 
-//	modImplementation (libs.spectrum) {
-//		exclude group: "net.fabricmc.fabric-api"
-//	}
+//	modImplementation (libs.spectrum)
 
-	modImplementation (libs.crowdin.translate) {
-		exclude group: "net.fabricmc.fabric-api"
+	modImplementation (libs.crowdin.translate)
+
+	modApi("me.shedaniel.cloth:cloth-config-fabric:8.3.103") {
+		exclude(group: "net.fabricmc.fabric-api")
+	}
+
+	modApi("io.github.vampirestudios:artifice:0.40.0+build.1-1.19.3-EXPERIMENTAL") {
+		exclude(group: "net.fabricmc.fabric-api")
 	}
 }
 
-configurations.all {
-	resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
-}
-
 processResources {
-	inputs.property "version", project.version
+	inputs.property 'version', version
 
-	filesMatching("fabric.mod.json") {
-		expand "version": project.version
+	filesMatching('fabric.mod.json') {
+		expand 'version': version
 	}
 }
 
@@ -115,10 +115,13 @@ java {
 	toolchain.languageVersion = JavaLanguageVersion.of(17)
 }
 
-jar {
-	from("LICENSE") {
-		rename { "${it}_${project.archivesBaseName}"}
-	}
+tasks.withType(JavaCompile).configureEach {
+	it.options.release = 17
+	it.options.encoding = 'UTF-8'
+}
+
+compileJava {
+	options.compilerArgs += '--enable-preview'
 }
 
 build {
@@ -127,13 +130,8 @@ build {
 
 publishing {
 	publications {
-		mavenJava(MavenPublication) {
-			artifact(remapJar) {
-				builtBy remapJar
-			}
-			artifact(sourcesJar) {
-				builtBy remapSourcesJar
-			}
+		mavenJava( MavenPublication ) {
+			from components.java
 		}
 	}
 	repositories {
